[package]
name = "ov_cli"
version = "0.0.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["OpenViking Contributors"]
description = "Rust CLI client for OpenViking"
license = "MIT"

[[bin]]
name = "ov"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "gzip"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
colored = "2.1"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
mime_guess = "2.0"
thiserror = "1.0"
unicode-width = "0.1"
ratatui = "0.29"
crossterm = "0.28"
zip = "2.2"
tempfile = "3.12"
url = "2.5"
walkdir = "2.5"
rustyline = "14.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
machine-uid = "0.5"
termimad = "0.34"
hex = "0.4"
getrandom = "0.2"
indicatif = "0.18"
bytes = "1.0"
viuer = "0.8"
image = "0.25"
