[package]
name = "ragfs-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
description = "Python bindings for RAGFS - Rust AGFS filesystem"
publish = false

[lib]
name = "ragfs_python"
crate-type = ["cdylib"]

[features]
default = ["extension-module", "s3", "cache-redis"]
extension-module = ["pyo3/extension-module"]
s3 = ["ragfs/s3"]
cache-redis = ["ragfs-cache-redis"]

[dependencies]
ragfs = { path = "../ragfs", features = ["cache"] }
ragfs-cache-redis = { path = "../ragfs-cache-redis", optional = true }
pyo3 = { version = "0.27", features = ["abi3", "abi3-py310"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("yuanrong-native", "mooncake-native"))'] }
