[project]
name = "multi-tenant-example"
version = "0.1.0"
description = "OpenViking Multi-Tenant admin workflow example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openviking>=0.1.6",
    "httpx>=0.27.0",
]

[tool.uv.sources]
openviking = { path = "../../", editable = true }
