[project]
name = "oc2ov-test"
version = "0.1.0"
description = "OpenClaw - OpenViking 端到端自动化测试"
authors = [
    { name = "OpenClaw Team" }
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-html>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.pytest-html]
cssfile = ""
self_contained_html = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
