[project]
name = "hindsight-langgraph"
version = "0.2.0"
description = "LangGraph integration for Hindsight - persistent memory tools, nodes, and memory instructions for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "langgraph",
    "langchain",
    "agents",
    "hindsight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.3.0",
    "hindsight-client>=0.4.0",
    # Transitive dependency security fixes
    "langchain-core>=1.2.22",  # Path traversal in legacy load_prompt functions fix
    "requests>=2.33.0",  # Insecure temp file reuse in extract_zipped_paths()
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.3.0",
]
all = [
    "langgraph>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/vectorize-io/hindsight"
Documentation = "https://github.com/vectorize-io/hindsight/tree/main/hindsight-integrations/langgraph"
Repository = "https://github.com/vectorize-io/hindsight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindsight_langgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_real_llm: end-to-end test that needs live external services (a running Hindsight server and/or real LLM provider keys). Excluded from the deterministic PR-CI bucket via -m 'not requires_real_llm'; run on its own via -m requires_real_llm.",
]

[dependency-groups]
dev = [
    "hindsight-langgraph[langgraph]",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
